--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode8
+osx_image: xcode8.2
 
 #install:
 #  - brew update && brew install swiftlint
@@ -12,10 +12,10 @@ env:
   - WORKSPACE=Nursing.xcworkspace
   - IOS_APP_SCHEME="Nursing"
   - IOS_FRAMEWORK_SCHEME="NursingCommon"
-  - IOS_SDK=iphonesimulator10.0
+  - IOS_SDK=iphonesimulator10.2
   matrix:
-    - DESTINATION="OS=10.0,name=iPhone 7 Plus"     SCHEME="$IOS_APP_SCHEME"           SDK="$IOS_SDK"     RUN_TESTS="YES" POD_LINT="YES"
-    - DESTINATION="OS=10.0,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES" POD_LINT="YES"
+    - DESTINATION="OS=10.2,name=iPhone 7 Plus"     SCHEME="$IOS_APP_SCHEME"           SDK="$IOS_SDK"     RUN_TESTS="YES" POD_LINT="NO"
+    - DESTINATION="OS=10.2,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="NO" POD_LINT="NO"
 script:
   - set -o pipefail
 #  - swiftlint
